Fix sidebar icon alignment

--- a/static/css/_sidebar.scss
+++ b/static/css/_sidebar.scss
@@ -79,7 +79,7 @@
       display: flex;
       flex-direction: column;
       justify-items: stretch;
-      align-items: center;
+      align-items: flex-start;
 
       .sidebar-item, .sidebar-item a {
         display: flex;
